--- a/.github/workflows/wake_up_app.yml
+++ b/.github/workflows/wake_up_app.yml
@@ -2,48 +2,51 @@ name: Wake Up Streamlit App
 
 on:
   schedule:
-    # 每11小时唤醒一次 (每天 0, 11, 22 点)
-    - cron: '0 0 * * *'    # 每天 0 点
-    - cron: '0 11 * * *'   # 每天 11 点
-    - cron: '0 22 * * *'   # 每天 22 点
+    # 每11小时唤醒一次 (UTC时间)
+    - cron: '0 0 * * *'     # UTC 0点 = 北京时间 8点
+    - cron: '0 11 * * *'    # UTC 11点 = 北京时间 19点
+    - cron: '0 22 * * *'    # UTC 22点 = 北京时间 次日6点
   workflow_dispatch:  # 支持手动触发
 
 jobs:
   wake-up:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 10
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
+    
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.13'
-
+        python-version: '3.11'
+    
+    # 使用官方 Action 安装 Chrome（更稳定）
+    - name: Setup Chrome
+      uses: browser-actions/setup-chrome@v1
+      with:
+        chrome-version: 'stable'
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install selenium webdriver-manager requests
-
-    - name: Install Chrome
+    
+    - name: Verify Chrome installation
       run: |
-        sudo apt-get update
-        sudo apt-get install -y wget gnupg
-        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-        sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-        sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
-
+        google-chrome --version || chrome --version || echo "Chrome version check failed"
+    
     - name: Run wake up script
       env:
         STREAMLIT_URL: ${{ secrets.STREAMLIT_URL }}
       run: |
         python .github/scripts/wake_up_app.py
-
+    
     - name: Upload logs
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: wake-up-logs
+        name: wake-up-logs-${{ github.run_number }}
         path: .github/logs/
+        retention-days: 7
